karl package Changelog
======================

Unreleased
----------

- Added a new 'Intranet' marker for live search.  Rather than depending on the
  type of the document, it depends on the location of the document.  Any 
  document contained in one of the predefined paths will get this new marker 
  the next time it is indexed.  The paths are defined by the application 
  setting 'intranet_search_paths' which defaults to '/profiles' and '/offices'.
  (LP #1353481)

3.132 (2014-8-22)
-----------------

- Fix a Unicode issue when reindexing

3.131 (2014-08-22)
------------------

- Removed the tags portlet. (LP #1357406)

- Reinstated the extracted text cache used by the text index for file data.
  Made the extracted text Persistent so it won't be loaded in RAM during normal
  operation.  The extracted text is also limited to 256kb in size and stored
  using gzip compression to minimize impact on database size. (LP #1340295)

- The global site tag cloud and each community's tag cloud are now precomputed
  to improve performance. (LP #1302128)

3.130 (2014-08-07)
------------------

- Fixed broken pagination introduced in last release. (LP #1353626)

- Convert X-Karl-Location header from Unicode to string. (LP #792334)

3.129 (2014-08-04)
------------------

- Changed the implementation of ``karl.content.views.files.download_zipped`` to
  use a temporary file instead of RAM to construct the zip file.  (LP #1349275)

- Performance enhancements to catalog batching and image drawer search.
  (LP #1351871)

3.128 (2014-07-22)
------------------

- Fixed a bug where we were trying to date localize a non-date value in the
  trash folder view. (LP #1340381)

3.127 (2014-07-11)
------------------

- Another unicode header fix for mimetype on preview (LP #1340391)

- Remove expensive, recursive calculation of 'total_size' in Files tool folder
  views.  (LP #1314685)

3.126 (2014-07-08)
------------------
